@@ -325,6 +325,7 @@ systemctl start drlm-tftpd.service
 - Bugfix in web, holded backups are not shown
 - New install script
 - Bugfix in installclient adding network interface
+- Added ability to adjust client configs upon migrations on rescue startup
 
 * Fri Feb 10 2023 Pau Roura <pau@brainupdaters.net> 2.4.10
 - Bugfix in installclient tunnig_rear function
