@@ -566,6 +566,7 @@ REAR_SERVICES_DEBIAN8="rpcbind"
 REAR_SERVICES_DEBIAN9="rpcbind"
 REAR_SERVICES_DEBIAN10="rpcbind"
 REAR_SERVICES_DEBIAN11="rpcbind"
+REAR_SERVICES_DEBIAN12="rpcbind"
 
 # UBUNTU Services
 REAR_SERVICES_UBUNTU12="portmap"
