@@ -558,6 +558,32 @@ function tunning_rear () {
   if $SUDO test -f "/etc/cron.d/rear"; then
     $SUDO rm -rf /etc/cron.d/rear
   fi
+
+  # add drlm setup script for rescue adjustments on migrations
+  $SUDO cat > /usr/share/rear/skel/default/etc/scripts/system-setup.d/98-drlm-setup-rescue.sh << EOF
+# Setting required environment for DRLM proper function
+
+is_true "$DRLM_MANAGED" || return 0
+
+read -r </proc/cmdline
+
+echo $REPLY | grep -q "drlm="
+if [ $? -eq 0 ]; then
+    drlm_cmdline=( $(echo ${REPLY#*drlm=} | tr "," " ") )
+    for i in ${drlm_cmdline[@]}
+    do
+        eval $i
+    done
+
+    echo "DRLM_MANAGED: Getting updated rescue configuration from DRLM ..."
+
+    test -n "$server" && echo "DRLM_SERVER=$server" >> /etc/rear/rescue.conf
+    test -n "$id" && echo "DRLM_ID=$id" >> /etc/rear/rescue.conf
+    test -n "$server" && echo 'DRLM_REST_OPTS="-H Authorization:$(cat /etc/rear/drlm.token) -k"' >> /etc/rear/rescue.conf
+
+fi
+EOF
+
 }
 
 function ssh_tunning_rear () {
