@@ -4,6 +4,7 @@ drlm (2.4.11) stable release; urgency=high
   * Bugfix in web, holded backups are not shown
   * New install script
   * Bugfix in installclient adding network interface
+  * Added ability to adjust client configs upon migrations on rescue startup
 
  -- Pau Roura <pau@brainupdaters.net>  Thu, 07 Dec 2023 00:00:00 +0100
 
